--- a/resources/deployment.yaml
+++ b/resources/deployment.yaml
@@ -17,4 +17,4 @@ spec:
         image: dummyimagename
         securityContext:
           allowPrivilegeEscalation: false
-          privileged: false
+          privileged: true
