--- a/.github/workflows/kyverno.yaml
+++ b/.github/workflows/kyverno.yaml
@@ -4,19 +4,18 @@ env:
   REGISTRY: ghcr.io
   IMAGE_NAME: ${{ github.repository }}
 jobs:
-  # Publish with ko build
   test:
     runs-on: ubuntu-20.04
-    permissions:
-      packages: read
-      contents: read
+    # permissions:
+    #   packages: read
+    #   contents: read
     steps:
     - name: Checkout code
       uses: actions/checkout@2541b1294d2704b0964813337f33b291d3f8596b # v3.0.2
     - name: Download Kyverno CLI
       run: |
         curl -sLO https://github.com/kyverno/kyverno/releases/download/v1.7.2/kyverno-cli_v1.7.2_linux_x86_64.tar.gz
-        tar -xvf kyverno-cli_v1.7.2_linux_x86_64.tar.gz
+        tar -xf kyverno-cli_v1.7.2_linux_x86_64.tar.gz
         ./kyverno version
     - name: Test resources
       run: |
