--- a/.github/workflows/kyverno.yaml
+++ b/.github/workflows/kyverno.yaml
@@ -6,9 +6,6 @@ env:
 jobs:
   test:
     runs-on: ubuntu-20.04
-    # permissions:
-    #   packages: read
-    #   contents: read
     steps:
     - name: Checkout code
       uses: actions/checkout@2541b1294d2704b0964813337f33b291d3f8596b # v3.0.2
@@ -20,3 +17,6 @@ jobs:
     - name: Test resources
       run: |
         ./kyverno apply policies/ -r resources/*.yaml
+    - name: Test cases
+      run: |
+        ./kyverno test tests/
