--- a/.github/workflows/kyverno.yaml
+++ b/.github/workflows/kyverno.yaml
@@ -20,4 +20,4 @@ jobs:
     - name: Test pre-defined cases
       run: |
         echo "## Test summary" >> $GITHUB_STEP_SUMMARY
-        ./kyverno test tests/ >> $GITHUB_STEP_SUMMARY
+        ./kyverno test tests/ | sed -e 's/\x1b\[[0-9;]*m//g' >> $GITHUB_STEP_SUMMARY
