--- a/.github/workflows/kyverno.yaml
+++ b/.github/workflows/kyverno.yaml
@@ -14,6 +14,6 @@ jobs:
           tar -xf kyverno-cli_v1.7.2_linux_x86_64.tar.gz
           ./kyverno version
       - name: Test new resources against existing policies
-        run: ./kyverno apply policies/ -r resources/*.yaml
+        run: ./kyverno apply policies/ -r resources/
       - name: Test pre-defined cases
         run: ./kyverno test tests/
