--- a/resources/deployment.yaml
+++ b/resources/deployment.yaml
@@ -16,5 +16,5 @@ spec:
       - name: container01
         image: dummyimagename
         securityContext:
-          allowPrivilegeEscalation: true
+          allowPrivilegeEscalation: false
           privileged: false
