--- a/.github/workflows/kyverno.yaml
+++ b/.github/workflows/kyverno.yaml
@@ -2,6 +2,8 @@ name: kyverno-policy-test
 on:
   - pull_request
   - workflow_dispatch
+env:
+  VERSION: v1.7.2
 jobs:
   test:
     runs-on: ubuntu-latest
@@ -10,8 +12,8 @@ jobs:
         uses: actions/checkout@v3
       - name: Download Kyverno CLI
         run: |
-          curl -sLO https://github.com/kyverno/kyverno/releases/download/v1.7.2/kyverno-cli_v1.7.2_linux_x86_64.tar.gz
-          tar -xf kyverno-cli_v1.7.2_linux_x86_64.tar.gz
+          curl -sLO https://github.com/kyverno/kyverno/releases/download/${{ env.REGISTRY }}/kyverno-cli_${{ env.REGISTRY }}_linux_x86_64.tar.gz
+          tar -xf kyverno-cli_${{ env.REGISTRY }}_linux_x86_64.tar.gz
           ./kyverno version
       - name: Test new resources against existing policies
         run: ./kyverno apply policies/ -r resources/
