--- a/.github/workflows/kyverno.yaml
+++ b/.github/workflows/kyverno.yaml
@@ -12,8 +12,8 @@ jobs:
         uses: actions/checkout@v3
       - name: Download Kyverno CLI
         run: |
-          curl -sLO https://github.com/kyverno/kyverno/releases/download/${{ env.REGISTRY }}/kyverno-cli_${{ env.REGISTRY }}_linux_x86_64.tar.gz
-          tar -xf kyverno-cli_${{ env.REGISTRY }}_linux_x86_64.tar.gz
+          curl -sLO https://github.com/kyverno/kyverno/releases/download/${{ env.VERSION }}/kyverno-cli_${{ env.VERSION }}_linux_x86_64.tar.gz
+          tar -xf kyverno-cli_${{ env.VERSION }}_linux_x86_64.tar.gz
           ./kyverno version
       - name: Test new resources against existing policies
         run: ./kyverno apply policies/ -r resources/
