--- a/.github/workflows/kyverno.yaml
+++ b/.github/workflows/kyverno.yaml
@@ -34,6 +34,7 @@ jobs:
             ./kyverno apply author.yaml -r incoming/$f --set request.userInfo.username=${{github.triggering_actor}} -o outgoing/temp.yaml
             sed '/^[[:space:]]*$/d' outgoing/temp.yaml > outgoing/$f
             rm incoming/$f
+            rm outgoing/temp.yaml
         fi
         done
     - name: Push manifests
