--- a/incoming/busybox.yaml
+++ b/incoming/busybox.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: gooddeployment01
+  namespace: default
 spec:
   replicas: 1
   selector:
@@ -13,8 +14,11 @@ spec:
         app: app
     spec:
       containers:
-      - name: container01
-        image: dummyimagename
+      - name: busybox
+        image: busybox:1.28
+        args:
+        - sleep
+        - 1d
         securityContext:
           allowPrivilegeEscalation: false
           privileged: false
