--- a/.github/workflows/kyverno.yaml
+++ b/.github/workflows/kyverno.yaml
@@ -31,7 +31,7 @@ jobs:
         if [[ "$f" = *\.yaml ]]
         then
             echo "Adding authorship to incoming/$f"
-            ./kyverno apply author.yaml -r incoming/$f --set request.userInfo.username=${{github.triggering_actor}} -o outgoing/temp.yaml
+            ./kyverno apply author.yaml -r incoming/$f --set request.userInfo.username=${{github.triggering_actor}},request.githubref=${{github.ref}} -o outgoing/temp.yaml
             sed '/^[[:space:]]*$/d' outgoing/temp.yaml > outgoing/$f
             rm incoming/$f
             rm outgoing/temp.yaml
