--- a/author.yaml
+++ b/author.yaml
@@ -16,4 +16,5 @@ spec:
         metadata:
           labels:
             corp.org/author: "{{request.userInfo.username}}"
-            corp.org/ref: "{{request.githubref}}"
+            corp.org/pr: "{{request.githubpr | to_string(@) }}"
+            corp.org/merger: "{{request.githubmerger}}"
